# fractalGPU

./: .clang-format  .gitignore  BENCH.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: bench.cpp  camera.hpp  config.hpp  main.cpp  recorder.hpp  renderer_cpu.cpp  renderer_cpu.hpp  renderer_gpu.cu  renderer_gpu.hpp  sdf.hpp  shaders.hpp
